# hack-verifiable-environments

./: README.md  pyproject.toml
docs/: index.html  v2.html  v3.html
hvta/: __init__.py  test.py
hvta/FilesystemWrapper/: __init__.py  filesystem_wrapper.py  virtual_fs.py
hvta/FilesystemWrapper/logical_bug_envs/: README.md
hvta/FilesystemWrapper/logical_bug_envs/FifteenPuzzle/: env_for_fs.py  env_with_bug.py
hvta/FilesystemWrapper/logical_bug_envs/Minesweeper/: env_for_fs.py  env_with_bug.py
hvta/FilesystemWrapper/logical_bug_envs/Sudoku/: env_for_fs.py  env_with_bug.py
hvta/FilesystemWrapper/logical_bug_envs/TowerOfHanoi/: env_for_fs.py  env_with_bug.py
hvta/FilesystemWrapper/logical_bug_envs/Wordle/: env_for_fs.py  env_with_bug.py
hvta/envs/: __init__.py
hvta/wrappers/: __init__.py
