[project]
name = "hack-verifiable-environments"
version = "0.1.0"
description = "Hack-Verifiable Environments"
requires-python = ">=3.10"
dependencies = [
    "textarena",
    "nltk",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
textarena = { git = "https://github.com/TextArena/TextArena.git" }
